# llama_bot

./: .env.sample  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  service.py  settings.py
app/database/: __init__.py  messages.py  responses.py  session_manager.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2023-09-07_1617f17207f2_date.py  2023-09-07_165592526aa1_init.py  2023-09-08_c4d047a29129_add_responses.py
